# browly

./: .gitignore  COMMIT_SUMMARY.md  DEVELOPMENT.md  PACKAGING.md  README.md  package.py  pyproject.toml
browly/: browsers.py  main.py
