[tool.poetry]
name = "browly"
version = "0.1.0"
description = "Cross-platform browser picker with GUI"
authors = ["Daniel Backman <daniel@backman.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
PySide6 = "^6.4.0"

[tool.poetry.scripts]
browly = "browly.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"